--- a/public/styles.css
+++ b/public/styles.css
@@ -16,6 +16,10 @@ h1, h2 {
     margin: 30px;
 }
 
+h2 {
+    text-transform: uppercase;
+}
+
 .container {
     width: 80%;
     max-width: 1200px;
